--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <ul class="nav navbar-nav foo pull-right" id="menu">
         <li><%= link_to 'HOME', welcome_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'OUR STORY', our_story_path, class: 'hvr-sweep-to-right'%></li>
-        <li><%= link_to 'PEOPLE', the_details_path, class: 'hvr-sweep-to-right'%></li>
+        <li><%= link_to 'PEOPLE', people_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'THE WEDDING', the_details_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'ACCOMODATION', accomodation_path, class: 'hvr-sweep-to-right'%></li>
         <li><%= link_to 'GIFTS', gifts_path, class: 'hvr-sweep-to-right'%></li>
