--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,8 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- *
+ *= require owl.carousel
+ *= require owl.theme
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -19,16 +20,6 @@
 @import "buttons";
 @import "headings";
 @import "forms";
-
-@font-face {
-  font-family: "JLynn";
-  src: url(/assets/fonts/JLynn-Bold.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "BLESD";
-  src: url(/assets/fonts/BLESD.otf) format("truetype");
-}
 
 .body-style{
   padding-top: 90px;
@@ -127,3 +118,37 @@ p {
   color: $yellow;
 }
 
+#owl-demo .item{
+  margin: 3px;
+}
+#owl-demo .item img{
+  display: block;
+  width: 100%;
+  height: 280px;
+}
+
+#owl-demo .item h4, .people-item .description h3, .bs .description h3 {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #6a6a6a;
+  margin: 0 0 -2px 0;
+  text-align: left;
+}
+
+.people-item {
+  display: block;
+  margin: 0 0 30px;
+  color: #6a6a6a;
+}
+
+#owl-demo .item .description, .people-item .description, .bs .description {
+ padding: 26px 0 22px 26px;
+}
+
+#owl-demo .item, .people-item, .bs {
+  margin: 20px;
+  border: 1px solid #f5f5f5;
+  background-color: #fafafa;
+  text-align: left;
+}
