--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,6 +85,7 @@ p {
 }
 
 .my-header {
+  font-size: 40px;
   font: bold 24px/45px Helvetica, Sans-Serif;
   color: $white;
   padding: 10px;
@@ -153,4 +154,23 @@ p {
   border: 1px solid #f5f5f5;
   background-color: #fafafa;
   text-align: left;
+}
+
+.modal {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.cross-off-gift-modal {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
 }
