--- a/app/views/messages/_send_enquiry.html.erb
+++ b/app/views/messages/_send_enquiry.html.erb
@@ -1,10 +1,9 @@
 <% @message = Message.new %>
 <div class='container level-header'>
   <h2> Send Message </h2>
-  <%= bootstrap_form_for(Message.new, layout: :horizontal)  do |f| %>
-    <%= f.hidden_field :message_subject, value: 'SEND EMAIL TO IAIN AND TANIA'%>
+  <%= bootstrap_form_for(@message, layout: :horizontal)  do |f| %>
+    <%= f.hidden_field :message_subject, value: 'QUESTION ABOUT THE WEDDING'%>
     <%= f.text_area :email, label: 'Enter your email' %>
-    <%= f.text_area :first_name, label: 'Enter your first name' %>
     <%= f.text_area :content, label: 'Details' %>
     <%= button_tag(type: 'submit', class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Sending..."}) do %>
       <i class="fa fa-save"></i> Send
