--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,7 +1,7 @@
 <div class = 'container'>
   <div class='thank you'>
-    <h2> CONTACT US </h2>
-    <p> If you have any questions please feel free to contact us: </p>
+    <h2> Contact Us </h2>
+    <p> Feel free to send us a message below if you want to be in touch: </p>
     <div class='send-enquiry'>
       <%= render 'messages/send_enquiry' %>
     </div>
