--- a/app/views/pages/people.html.erb
+++ b/app/views/pages/people.html.erb
@@ -53,4 +53,7 @@
   <div class='groomsmen'>
     <%= render 'pages/groomsmen' %>
   </div>
+  <div class='junior-team'>
+    <%= render 'pages/juniors_involved' %>
+  </div>
 </br\>
