--- a/app/views/pages/_juniors_involved.html.erb
+++ b/app/views/pages/_juniors_involved.html.erb
@@ -13,8 +13,8 @@
         </a>
       </div>
       <div class="col-md-3 col-sm-2">
-        <a href="../images/JOHNN.PNG" data-rel="lightcase:mw-groomsmen" class="people-item">
-          <img src="../images/JOHNN.PNG" alt="John Tharakan", width='100%', height='180'>
+        <a href="../images/jonu.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+          <img src="../images/jonu.jpg" alt="John Tharakan", width='100%', height='180'>
           <div class="description">
             <h3>John Tharakan</h3>
             <span>Ring Bearer</span>
