--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.text_field :first_name, placeholder: 'Enter first name', class: 'form-control required', autofocus: true %>
     <%= f.text_field :surname, placeholder: 'Enter surname', class: 'form-control required' %>
     <%= f.text_field :address, placeholder: 'Enter address', class: 'form-control required' %>
+    <%= f.text_field :email, placeholder: 'Enter email', class: 'form-control required' %>
 
     <div class='level-header'>
       <%= button_tag(type: 'submit', class: "btn generic-button command-button save-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
