--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -9,6 +9,7 @@
       <th> First Name </th>
       <th> Surname </th>
       <th> Address </th>
+      <th> Email </th>
       <% if current_user %>
         <th> Administration </th>
       <% end %>
@@ -18,6 +19,7 @@
         <td> <%= guest.first_name %> </td>
         <td> <%= guest.surname %> </td>
         <td> <%= guest.address %> </td>
+        <td> <%= guest.email %> </td>
         <% if current_user && user_signed_in? %> 
           <td><%= link_to fa_icon("pencil", text:'Edit'), edit_guest_path(id: guest.id), class: "btn generic-button command-button hvr-sweep-to-right", id: 'edit-guest-link' %>
           <%= link_to fa_icon("trash", text: 'Delete'), guest_path(guest), method: :delete,
