--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -4,6 +4,7 @@
   <p> Feel free to get in touch with us below if you have any questions or something to share </p>
   <%= bootstrap_form_for(@message, layout: :horizontal)  do |f| %>
     <%= f.hidden_field :message_subject, value: 'QUESTION ABOUT THE WEDDING'%>
+    <%= f.text_area :full_name, label: 'Your Full Name' %>
     <%= f.text_area :email, label: 'Your Email' %>
     <%= f.text_area :content, label: 'Message Content', rows: '10' %>
     <%= button_tag(type: 'submit', class: "btn generic-button command-button ", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Sending..."}) do %>
