--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -8,6 +8,7 @@
     <thead>
       <th> First Name </th>
       <th> Surname </th>
+      <th> Age Category </th>
       <th> Address </th>
       <th> Email </th>
       <% if current_user %>
@@ -18,6 +19,7 @@
       <tr>
         <td> <%= guest.first_name %> </td>
         <td> <%= guest.surname %> </td>
+        <td> <%= guest.age_category %> </td>
         <td> <%= guest.address %> </td>
         <td> <%= guest.email %> </td>
         <% if current_user && user_signed_in? %> 
