--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,12 +42,27 @@ p {
   color: $black;
 }
 
+time {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+span {
+  width: 80px;
+  height: 50px;
+}
+
+div[style] {
+  width: 200 !important;
+  height: 300px;
+}
+
 .dropdown-title {
   color: $white;
 }
 
 .tidy-img {
-  padding-bottom: 30px;
+  padding-bottom: 10px;
 }
 
 .columns      {
@@ -75,14 +90,7 @@ p {
   &.success-alert{
     color: $white;
   }
-
 }
-
-.cross-off-gift-modal {
-  background-color: $white
-}
-
-
 
 .row {
   margin-left: -15px;
@@ -101,28 +109,8 @@ p {
   overflow: auto;
 }
 
-.people-carousel .item .description, .people-item .description, .bs .description {
- padding: 26px 0 30px 35px;
-}
-
-.people-carousel .item, .people-item, .bs {
-  margin: 15px;
-  border: 1px solid #f5f5f5;
-  background-color: #fafafa;
-  text-align: left;
-}
-
 .modal {
   text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .modal:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: " ";
-    height: 100%;
-  }
 }
 
 .cross-off-gift-modal {
@@ -131,19 +119,8 @@ p {
   vertical-align: middle;
 }
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
-
-time {
-  font-weight: bold;
-  font-size: 18px;
+.cross-off-gift-modal {
+  background-color: $white
 }
 
 .para-text {
@@ -155,12 +132,6 @@ time {
   margin: 0 auto;
 }
 
-.description {
-  position: relative;
-  top: 50%;
-  vertical-align: bottom;
-}
-
 .question {
   font-weight: bold;
   font-size: 18px;
@@ -170,7 +141,31 @@ time {
   padding-bottom: 14px;
 }
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @viewport{
     zoom: 1.0;
     width: extend-to-zoom;
+}
+
+@media screen and (min-width: 768px) {
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.caption {
+  text-transform: uppercase;
+  text-align: center;
+  color: $pink;
+  font-weight: bold;
 }
