--- a/app/assets/stylesheets/owl.scss
+++ b/app/assets/stylesheets/owl.scss
@@ -1,17 +1,22 @@
-#owl-demo .item img {
-    width: auto !important;
-}
-
 #owl-demo .item{
   margin: 3px;
-}
-#owl-demo .item img{
-  display: block;
-  width: auto;
-  height: 275px;
+  width: auto !important;
 }
 
-#owl-demo .item h4, .people-item .description h3, .bs .description h3 {
+#owl-demo .item img{
+  display: block;
+  width: auto !important;
+  height: 260px;
+}
+
+#owl-demo .item .description {
+ padding: 26px 0 30px 35px;
+ color: $black;
+ background:$pink;
+ height: 200px;
+}
+
+#owl-demo .item .description  {
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
@@ -20,11 +25,7 @@
   text-align: left;
 }
 
-#owl-demo .item .description, .people-item .description, .bs .description {
- padding: 26px 0 30px 35px;
-}
-
-#owl-demo .item, .people-item, .bs {
+#owl-demo .item, {
   margin: 15px;
   border: 1px solid #f5f5f5;
   background-color: #fafafa;
