--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -1,18 +1,13 @@
 <div class="container">
-  <h2>People Involved</h2>
+  <h2>Bride, Groom and Parents</h2>
   <div class="hr"></div>
-  <div class="row">
     <div id="owl-demo" class="owl-carousel">
       <% @main_people.each do |d| %>
-        <div class="owl-item">
+        <div class="item">
           <% @photo = d["photo"] %>
-          <%= image_tag(@photo, class: "img-responsive") %>
-          <div class = "description">
-            <h4><%= d["name"] %></h4>
-            <span><%= d["title"]%></span>
-          </div>
+          <%= image_tag(@photo, class: "img-responsive tidy-img") %>
+          <span class="caption"><%= d["name"] %></span>
         </div>
       <% end %>
     </div>
-  </div>
 </div>
