--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,6 +2,7 @@ $white: #FFFFFF;
 $black: #000000;
 $pink: #b21972;
 $yellow: #ffc400;
+$grey: #f6f6f6;
 $content-width: 1000px;
 $breakpoint: 800px;
 $nav-height: 62px;
